Alignment fixes

--- a/_assets/css/_business-standards.scss
+++ b/_assets/css/_business-standards.scss
@@ -12,7 +12,6 @@
   text-decoration: none;
   text-align: center;
   display: block;
-  min-width: 130px;
 }
 
 .hrms-arrow {
